# server_side_custom_video_source

./: README.md  build.sh  install.sh  nginx.conf  ngx_agora_helper.c  ngx_agora_helper.h  rtmpg.conf  setup.sh
libagorac/: agorac.cpp  agorac.h  agoralog.cpp  agoralog.h  install.sh  makefile  workqueue.h
libagorac/helpers/: agoradecoder.cpp  agoradecoder.h  agoraencoder.cpp  agoraencoder.h  agoralog.cpp  agoratype.h  context.h  localconfig.cpp  localconfig.h  utilities.h
new-sdk/: PACKAGE_INFO  README.zh.md
new-sdk/example/: CMakeLists.txt  README.zh.md  build.sh  sync-data.sh  toolchain.cmake
new-sdk/example/common/: sample_common.cpp  sample_common.h  sample_connection_observer.cpp  sample_local_user_observer.h  sample_local_user_observer2.cpp  sample_local_user_observer2.h
new-sdk/example/common/file_parser/: helper_h264_parser.cpp
new-sdk/example/encrypt/: CMakeLists.txt  sample_receive_decrypted_h264.cpp  sample_send_encrypted_h264.cpp
new-sdk/example/h264_opus/: ._CMakeLists.txt  CMakeLists.txt  sample_send_h264_opus.cpp
new-sdk/example/h264_pcm/: CMakeLists.txt  sample_receive_h264_pcm.cpp  sample_send_h264_pcm.cpp
new-sdk/example/mixed_audio/: CMakeLists.txt  sample_receive_mixed_audio.cpp
new-sdk/example/receive_mult_video/: CMakeLists.txt  sample_receive_yuv_from_multi_user.cpp
new-sdk/example/send_dual_video_stream/: CMakeLists.txt  sample_send_h264_dual_stream.cpp  sample_send_yuv_dual_stream.cpp
new-sdk/example/string_uid/: CMakeLists.txt  sample_stringuid_receive.cpp  sample_stringuid_send.cpp
new-sdk/example/yuv_pcm/: CMakeLists.txt  sample_receive_yuv_pcm.cpp  sample_send_yuv_pcm.cpp
new-sdk/sdk/low_level_api/include/: AgoraBase.h  AgoraMediaPlayerTypes.h  IAgoraMediaPlayerSource.h  IAgoraParameter.h  IAgoraRtmService.h  IAgoraService.h  NGIAgoraAudioTrack.h  NGIAgoraLocalUser.h  NGIAgoraMediaNodeFactory.h  NGIAgoraRtcConnection.h
package/: README  create_package.sh  install.sh  recover.sh
package/source/DEBIAN/: control  postinst
patches/: nginx-rtmp-module.patch  nginx.patch
